--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,13 +5,12 @@ bind-key M-b send-prefix
 
 # mouse mode
 set -g mouse on
-set-option -g renumber-windows on
 
 # remap split window
 unbind '"'
 unbind %
 bind - split-window -h
-bind | split-window -v
+bind \\ split-window -v
 
 # start at index 1
 set -g base-index 1
@@ -22,14 +21,16 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # theme config
-set -g @plugin 'kylepeeler/tmux-nightowl'
-set -g @nightowl-show-powerline true
-set -g @nightowl-show-fahrenheit false
-set -g @nightowl-show-weather false
-set -g @nightowl-show-network false
-set -g @nightowl-show-timezone false
-set -g @nightowl-border-contrast true
-set -g @nightowl-show-left-icon 
+set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @theme_disable_plugins 1
+set -g @theme_variation 'storm'
+set -g @theme_left_separator ''
+set -g @theme_right_separator ''
+set -g @theme_transparent_status_bar 'true'
+set -g @theme_transparent_left_separator_inverse ''
+set -g @theme_transparent_right_separator_inverse ''
+
+
 
 # vim navigation
 set -g @plugin 'christoomey/vim-tmux-navigator'
