--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -118,28 +118,28 @@ alt-6 = 'workspace 6'
 alt-7 = 'workspace 7'
 alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
-alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-alt-b = 'workspace B'
+# alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
+# alt-b = 'workspace B'
 # alt-c = 'workspace C'
-alt-d = 'workspace D'
-alt-e = 'workspace E'
-alt-f = 'workspace F'
-alt-g = 'workspace G'
-alt-i = 'workspace I'
-alt-m = 'workspace M'
-alt-n = 'workspace N'
-alt-o = 'workspace O'
-alt-p = 'workspace P'
-alt-q = 'workspace Q'
-alt-r = 'workspace R'
-alt-s = 'workspace S'
+# alt-d = 'workspace D'
+# alt-e = 'workspace E'
+# alt-f = 'workspace F'
+# alt-g = 'workspace G'
+# alt-i = 'workspace I'
+# alt-m = 'workspace M'
+# alt-n = 'workspace N'
+# alt-o = 'workspace O'
+# alt-p = 'workspace P'
+# alt-q = 'workspace Q'
+# alt-r = 'workspace R'
+# alt-s = 'workspace S'
 alt-t = 'workspace T'
-alt-u = 'workspace U'
-alt-v = 'workspace V'
-alt-w = 'workspace W'
-alt-x = 'workspace X'
-alt-y = 'workspace Y'
-alt-z = 'workspace Z'
+# alt-u = 'workspace U'
+# alt-v = 'workspace V'
+# alt-w = 'workspace W'
+# alt-x = 'workspace X'
+# alt-y = 'workspace Y'
+# alt-z = 'workspace Z'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
@@ -151,28 +151,28 @@ alt-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
 alt-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
 alt-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
 alt-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
-alt-shift-a = ['move-node-to-workspace A', 'workspace A']
-alt-shift-b = ['move-node-to-workspace B', 'workspace B']
+# alt-shift-a = ['move-node-to-workspace A', 'workspace A']
+# alt-shift-b = ['move-node-to-workspace B', 'workspace B']
 # alt-shift-c = ['move-node-to-workspace C', 'workspace C']
-alt-shift-d = ['move-node-to-workspace D', 'workspace D']
-alt-shift-e = ['move-node-to-workspace E', 'workspace E']
-alt-shift-f = ['move-node-to-workspace F', 'workspace F']
-alt-shift-g = ['move-node-to-workspace G', 'workspace G']
-alt-shift-i = ['move-node-to-workspace I', 'workspace I']
-alt-shift-m = ['move-node-to-workspace M', 'workspace M']
-alt-shift-n = ['move-node-to-workspace N', 'workspace N']
-alt-shift-o = ['move-node-to-workspace O', 'workspace O']
-alt-shift-p = ['move-node-to-workspace P', 'workspace P']
-alt-shift-q = ['move-node-to-workspace Q', 'workspace Q']
-alt-shift-r = ['move-node-to-workspace R', 'workspace R']
-alt-shift-s = ['move-node-to-workspace S', 'workspace S']
+# alt-shift-d = ['move-node-to-workspace D', 'workspace D']
+# alt-shift-e = ['move-node-to-workspace E', 'workspace E']
+# alt-shift-f = ['move-node-to-workspace F', 'workspace F']
+# alt-shift-g = ['move-node-to-workspace G', 'workspace G']
+# alt-shift-i = ['move-node-to-workspace I', 'workspace I']
+# alt-shift-m = ['move-node-to-workspace M', 'workspace M']
+# alt-shift-n = ['move-node-to-workspace N', 'workspace N']
+# alt-shift-o = ['move-node-to-workspace O', 'workspace O']
+# alt-shift-q = ['move-node-to-workspace Q', 'workspace Q']
+# alt-shift-p = ['move-node-to-workspace P', 'workspace P']
+# alt-shift-r = ['move-node-to-workspace R', 'workspace R']
+# alt-shift-s = ['move-node-to-workspace S', 'workspace S']
 alt-shift-t = ['move-node-to-workspace T', 'workspace T']
-alt-shift-u = ['move-node-to-workspace U', 'workspace U']
-alt-shift-v = ['move-node-to-workspace V', 'workspace V']
-alt-shift-w = ['move-node-to-workspace W', 'workspace W']
-alt-shift-x = ['move-node-to-workspace X', 'workspace X']
-alt-shift-y = ['move-node-to-workspace Y', 'workspace Y']
-alt-shift-z = ['move-node-to-workspace Z', 'workspace Z']
+# alt-shift-u = ['move-node-to-workspace U', 'workspace U']
+# alt-shift-v = ['move-node-to-workspace V', 'workspace V']
+# alt-shift-w = ['move-node-to-workspace W', 'workspace W']
+# alt-shift-x = ['move-node-to-workspace X', 'workspace X']
+# alt-shift-y = ['move-node-to-workspace Y', 'workspace Y']
+# alt-shift-z = ['move-node-to-workspace Z', 'workspace Z']
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
 alt-tab = 'workspace-back-and-forth'
@@ -181,6 +181,17 @@ alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 alt-shift-semicolon = 'mode service'
+
+
+[workspace-to-monitor-force-assignment]
+1 = 'main' # Monitor sequence number from left to right. 1-based indexing
+2 = 'main' # Main monitor
+3 = 'main' # Non-main monitor in case when there are only two monitors
+4 = 'main' # Case insensitive regex substring
+5 = 'main' # Case insensitive regex match
+#   The first matching pattern will be used
+T = "built-in"
+
 
 # 'service' binding mode declaration.
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -198,3 +209,8 @@ alt-shift-h = ['join-with left', 'mode main']
 alt-shift-j = ['join-with down', 'mode main']
 alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
+
+[[on-window-detected]]
+if.app-id = 'app.zen-browser.zen'
+if.window-title-regex-substring = 'Picture-in-Picture'
+run = ['layout floating']
